if include_kttsd_festival
  festival_DIR = festival
endif

if include_kttsd_festivalint
  festivalint_DIR = festivalint
endif

if include_kttsd_festivalcs
  festivalcs_DIR = festivalcs
endif

if include_kttsd_freetts
  freetts_DIR = freetts
endif

if include_kttsd_command
  command_DIR = command
endif

if include_kttsd_hadifax
  hadifax_DIR = hadifax
endif

if include_kttsd_flite
  flite_DIR = flite
endif

SUBDIRS = $(festival_DIR) $(festivalint_DIR) $(festivalcs_DIR) $(freetts_DIR) \
			$(command_DIR) $(hadifax_DIR) $(flite_DIR) festivalint command hadifax flite
