#kdevelop: festival_DIR = festival
if include_kttsd_festival
  festival_DIR = festival
endif

#kdevelop: festivalint_DIR = festivalint
if include_kttsd_festivalint
  festivalint_DIR = festivalint
endif

#kdevelop: festicalcs_DIR = festivalcs
if include_kttsd_festivalcs
  festivalcs_DIR = festivalcs
endif

#kdevelop: freetts_DIR = freetts
if include_kttsd_freetts
  freetts_DIR = freetts
endif

#kdevelop: command_DIR = command
if include_kttsd_command
  command_DIR = command
endif

#kdevelop: hadifax_DIR = hadifax
if include_kttsd_hadifax
  hadifax_DIR = hadifax
endif

#kdevelop: flite_DIR = flite
if include_kttsd_flite
  flite_DIR = flite
endif

#kdevelop: epos_DIR = epos
if include_kttsd_epos
  epos_DIR = epos
endif

SUBDIRS = \
        $(festival_DIR) \
        $(festivalint_DIR) \
        $(festivalcs_DIR) \
        $(freetts_DIR) \
        $(command_DIR) \
        $(hadifax_DIR) \
        $(flite_DIR) \
        $(epos_DIR)
